POST が1つ動いたところまで確認＋エラーハンドリングを修正.
